# field-manager-python-client

./: Makefile  README.md  Readme.md  TODO  TODO.md  config.yaml
.github/workflows/: generate-python-client.yaml  release.yaml
examples/: pyproject.toml
examples/examples/: ex_get_organizations.py  ex_historical_projects.py  setup.py  setup_auto_fetch_token.py
field-manager-data-api-client/: README.md  pyproject.toml
field-manager-data-api-client/field_manager_data_api_client/api/bff/: get_files_in_project_projects_project_id_bff_files_get.py  get_location_summaries_projects_project_id_location_summaries_get.py  get_project_location_methodtypes_summary_organizations_organization_id_projectlocationmethodtypes_get.py  get_project_summaries_project_summaries_get.py
field-manager-data-api-client/field_manager_data_api_client/api/projects/: get_linked_projects_projects_project_id_linked_projects_get.py
field-manager-data-api-client/field_manager_data_api_client/models/: __init__.py  bff_file.py  bff_location.py  bff_location_summary.py  bff_method.py  bff_method_summary.py  bff_project_summary.py  linked_project_info.py  location.py  project.py  project_info.py  project_location_method_types.py  project_summary.py
field-manager-python-client/: pyproject.toml
field-manager-python-client/field-manager-python-client/models/: bff_file.py  linked_project_info.py  location.py  location_create.py  location_update.py  pdf_options.py  plot_info_object.py  project.py  project_info.py  project_summary.py
field-manager-python-client/field_manager_python_client/models/: __init__.py  cross_section.py  cross_section_create.py  cross_section_update.py  linked_project_info.py  location.py  (+115 more)
logs/: log  versions
openapi_specification/: openapi.json  version
templates/: README.md.jinja  pyproject.toml.jinja
(+6 files in other folders)
